# TF2.4_IVIM-MRI_CodeCollection

./: .gitattributes  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  REVIEWER_RESPONSE.md  REVIEWER_RESPONSE_R2.md  bayesian.py  bootstrap.py  calib.py  combined_report.html  conftest.py  diag_convention.py  diag_dl_methods.py  dl_uncertainty.py  index.html  ivim_fit.py  ivim_simulation.bval  ivim_simulation.bvec  local.env.example  make_figures.py  make_manuscript_figures.py  pyproject.toml  pytest.ini  reliability_diagrams.jsx  repostatus.py  requirements.txt  run_grid_v2.py  run_grid_v3.py  run_p2_recovery.py  run_p3_grid.py  run_w1.py  run_w3_calib.py  smoke_fit.py  test_duration.csv  test_output.csv
.github/: pull_request_template.md
CodeCharacterization/: AlgorithmTablePlot.py  CorrelationMatrix_fig_synthetic.py  CorrelationMatrix_fig_synthetic_mixed.py  fig1.py  fig_correlationmatrix.py  fig_correlationmatrix_allregions.py  fig_correlationmatrix_half_harmonization.py  fig_correlationmatrix_half_harmonization_difference.py  fig_errordistribution.py  fig_errordistribution_allregions.py  fig_errordistribution_grouped_harmonization.py  ivim_fitting_phantom.py  ivim_fitting_script.py  ivim_fitting_skippedalgorithms.py  phantom_to_array.py  test_fitting_phantom.py
Docker/: .dockerignore  DOCKERFILE_MERGE.md  Dockerfile  Dockerfile.unified  README.md  build-kaapana.sh  build-standalone.sh  generate_signal_docker_test.py  ivim_simulation.bval
ISMRM24_figs/: curves.py
WrapImage/: dicom2niix_wrapper.py  inquire_dicom2niix.py  nifti_wrapper.py  nifti_wrapper_kaapana.py
dashboard_website/: index.html  index.js
data/: abdomen_readme.txt  brain.bval  brain.bvec  brain.nii  brain_readme.txt
doc/: Introduction to TF2.4_IVIM-MRI_CodeCollection github and IVIM Analysis using Python.ipynb  Introduction_to_TF24_IVIM-MRI_CodeCollection_github_and_IVIM_Analysis_using_Python.ipynb  code_contributions_record.csv  create_local_copy_of_repository.md  creating_test.md  guidelines_for_contributions.md  index.rst  matlab_instructions.md  setting_up_git.md  wrapper_usage_example.ipynb
docs/: conf.py  figures.rst  index.rst
figures/: calibration_heatmap.jsx
html_report/: combined_report.html
kaapana_ivim_osipi/: INSTALL.md  INSTALL_KAAPANA.md  INSTALL_WORKFLOW.md  README.md  TECHNICAL.md  USAGE.md
notebooks/: _config.yml  _toc.yml  fitting_results.ipynb
npe/: README.md  atlas.csv  atlas.npz  atlas_v2.csv  atlas_v2.npz  benchmark_timings.csv  conftest.py  cp3_coverage_v1.csv  cp3_coverage_v2.csv  cp3_crlb_compare.csv  cp3_crlb_compare_v2.csv  cp3_sbc_stats.csv  cp3_sbc_stats_v2.csv  crlb_sampling_bound_lowSNR.csv  efficiency_map.csv  efficiency_map_dense.csv  efficiency_map_maf.csv  efficiency_map_priorAlt.csv  f1_misspecification.csv  f2_realdata.csv  g_ood_gating_voxels.csv  loss_dense.json  loss_gridA.json  loss_priorAlt.json  loss_setB.json  loss_setB_maf.json  pytest.ini  (+21 more)
(+289 files in other folders)
